--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
+<html>
 
+    <header>
+<img src="https://learn.algoritmika.org/uploads/2021/01/logo_0_1611261359.svg">
+<a href="#">Фотогалерея</a>
+    </header>
+
+    <main>
+<h1>Самойлов и Ко</h1>
+    <table>
+        <tr>
+<td>
+<img src="https://learn.algoritmika.org/uploads/2021/01/happy-family-2284698_1920%201_0_1611261360.png">
+</td>
+<td>
+<img src="https://learn.algoritmika.org/uploads/2021/01/children-817368_1920%201_0_1611261360.png">
+</td>
+<td>
+<img src="https://learn.algoritmika.org/uploads/2021/01/house-1158139_1920%201_0_1611261360.png">
+</td>
+
+        </tr>
+    </table>
+    <h2>
+Мы-семья Самойловых
+</h2>
+<ul>
+          <li>папа Алекс — инженер, архитектор</li>
+        
+          <li>мама Наталья — ландшафтный дизайнер, флорист</li>
+
+          <li>дети Джеймс и Алёна — начинающие фотографы</li>
+
+          <li>пёс Джон — главный в весёлой команде</li>
+</ul>
+<hr>
+<h2>Любим весёлые праздники для семей</h2>
+<hr>
+    </main>
+     <footer>
+<p>Эл. почта:</p>
+<p>Телефон:</p>
+     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
